# kstars

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.cicd  README.md  config-kstars.h.cmake  org.kde.kf5auth.kstars.actions  org.kde.kstars.appdata.xml
.gitlab-ci/: common_rules.yml
Tests/: CMakeLists.txt  README.md  run_tests.py  testhelpers.h
Tests/auxiliary/: CMakeLists.txt  README.md  TESTS.md  testbinhelper.h  testcachingdms.h  testcolorscheme.h  testcsvparser.cpp  testcsvparser.h  testdms.h  testfov.h  testfwparser.cpp  testfwparser.h  testgeolocation.h  testksalmanac.cpp  testksalmanac.h  testkspaths.h  testksuserdb.h  testrectangleoverlap.h  testtrixelcache.h
Tests/datahandlers/: README.md  test_catalogsdb.h
Tests/ekos/: CMakeLists.txt
Tests/ekos/analyze/: CMakeLists.txt  README.md
Tests/ekos/observatory/: CMakeLists.txt  README.md
Tests/fitsviewer/: README.md  testfitsdata.cpp  testfitsdata.h
Tests/internalguide/: testguidestars.cpp
Tests/kstars_lite_ui/: README.md  kstars_lite_ui_tests.h
Tests/kstars_ui/: CMakeLists.txt  Messier-1-40.esq  README.md  TESTS.md  kstars_ui_tests.cpp  kstars_ui_tests.h  mockmodules.h  test_artificial_horizon.h  test_catalog_download.cpp  test_catalog_download.h  test_ekos.cpp  test_ekos.h  test_ekos_align.cpp  test_ekos_align.h  test_ekos_capture.h  test_ekos_capture_count.h  test_ekos_capture_helper.cpp  test_ekos_capture_workflow.cpp  test_ekos_capture_workflow.h  test_ekos_filterwheel.cpp  test_ekos_filterwheel.h  test_ekos_focus.cpp  test_ekos_focus.h  test_ekos_guide.h  test_ekos_helper.cpp  test_ekos_helper.h  test_ekos_meridianflip.h  test_ekos_meridianflip_base.cpp  test_ekos_meridianflip_base.h  test_ekos_meridianflip_specials.h  test_ekos_meridianflipstate.cpp  test_ekos_meridianflipstate.h  test_ekos_mount.cpp  test_ekos_mount.h  test_ekos_scheduler.cpp  test_ekos_scheduler.h  test_ekos_scheduler_ops.cpp  test_ekos_scheduler_ops.h  test_ekos_simulator.cpp  test_ekos_simulator.h  (+4 more)
Tests/polaralign/: test_polaralign.cpp
Tests/projections/: CMakeLists.txt  README.md
Tests/shared/: CMakeLists.txt  README.md  kstars_test_macros.h
Tests/skycomponents/: CMakeLists.txt  README.md
Tests/skyobjects/: README.md  test_skypoint.h  test_starobject.h
Tests/time/: CMakeLists.txt  README.md  test_kstarsdatetime.cpp  test_kstarsdatetime.h
Tests/tools/: README.md  testartificialhorizon.cpp  testdeltara.cpp  testgreatcircle.cpp
cmake/modules/: FindINDI.cmake
datahandlers/: ksparser.cpp
docker/: Dockerfile  build-gsc.sh  build-indi.sh  build-phd2.sh  build-stellarsolver.sh  build.sh  install-gsc.sh  prepare-kstars-ci.sh
kstars/: .clinerules  CMakeLists.txt  ksalmanac.cpp  kspopupmenu.cpp  kspopupmenu.h  kstars.cpp  kstars.h  kstars.kcfg  kstars.notifyrc  kstarsactions.cpp  kstarsdata.cpp  kstarsdata.h  kstarsdbus.cpp  kstarsinit.cpp  kstarslite.cpp  kstarslite.h  kstarssplash.h  main.cpp  org.kde.kstars.Ekos.OpticalTrain.xml  org.kde.kstars.Ekos.xml  org.kde.kstars.INDI.LightBox.xml  org.kde.kstars.INDI.PAC.xml  qtcompat.h  skyglpainter.cpp  skymap.cpp  skymap.h  skymapdrawabstract.cpp  skymapevents.cpp  skymaplite.cpp  skymaplite.h  skymapliteevents.cpp  skyqpainter.cpp
kstars/auxiliary/: QProgressIndicator.h  colorscheme.cpp  colorscheme.h  ctk3slider.cpp  ctkrangeslider.cpp  filedownloader.cpp  filedownloader.h  fov.cpp  geolocation.cpp  imageexporter.cpp  imageviewer.cpp  imageviewer.h  ksdssdownloader.cpp  ksdssdownloader.h  ksfilereader.cpp  ksmessagebox.cpp  ksmessagebox.h  kspaths.cpp  ksutils.cpp  ksutils.h  kswizard.cpp  kswizard.h  minimizewidget.cpp  minimizewidget.h  qcustomplot.cpp  qcustomplot.h  screencapture.cpp  screencapture.h  skyobjectlistmodel.h  thememanager.cpp  thememanager.h  thumbnaileditor.h  thumbnailpicker.h  xplanetimageviewer.cpp  xplanetimageviewer.h
kstars/catalogsdb/: catalogsdb.cpp  catalogsdb.h
kstars/data/: indidrivers.xml
kstars/dialogs/: addcatalogobject.cpp  addcatalogobject.h  addcatdialog.h  addlinkdialog.h  catalogcsvimport.h  catalogdetails.h  catalogobjectlistmodel.cpp  catalogsdbui.h  detaildialog.cpp  detaildialog.h  exportimagedialog.h  finddialog.cpp  finddialog.h  focusdialog.h  fovdialog.cpp  fovdialog.h  locationdialog.cpp  locationdialog.h  timedialog.h  viewsdialog.h
kstars/ekos/: extensions.cpp  extensions.h  manager.cpp  manager.h  profileeditor.h  profilescript.cpp  profilescript.h  profilescriptdialog.cpp  profilewizard.h  qMDNS.cpp  qMDNS.h
kstars/fitsviewer/: bayerparameters.cpp  fitsbahtinovdetector.cpp  fitscentroiddetector.cpp  fitscommon.h  fitsdata.cpp  fitsdata.h  fitsdebayer.h  fitsdirwatcher.cpp  fitsdirwatcher.h  fitshistogram.h  fitslabel.cpp  (+31 more)
tools/: fix_qt_keywords.sh
(+586 files in other folders)
