# Tests for kstars/ekos/analyze/
#
# TODO: Add tests for:
#   - Analyze log file parsing (reading .analyze session files)
#   - Timeline segment creation from parsed events
#   - Statistics computation (median HFR, guide RMS, etc.)
#   - YAxisTool range and tick calculation
#
# The log parsing and statistics parts do not require a display and
# can be tested with small synthetic .analyze files.
#
# Example target structure (uncomment and complete when adding tests):
#
# ADD_EXECUTABLE( test_analyze test_analyze.cpp )
# TARGET_LINK_LIBRARIES( test_analyze ${TEST_LIBRARIES} )
# ADD_TEST( NAME TestAnalyze COMMAND test_analyze )
# SET_TESTS_PROPERTIES( TestAnalyze PROPERTIES LABELS "stable" )
